xx May 2007: 0.3.9 Miek <miek@miek.nl>
  -- small fixes --
   * Add -S and -D to the known options of rdup-restore (reported by 
     Ben Coffey)

14 Mar 2007: 0.3.8 Miek <miek@miek.nl>
  -- bugfixes --
   * NOTE: -n changed semantics!
   * Add 'E:' to the known options in rdup-dump.in
   * Fix the +NUMBER argument in rdup-snapshot (reported by Joerg Rueppel)
   * Fix usage of -z (and any other option that toggles rdup's -c option)
     (thanks to J.W. Janssen for reporting)
   * Use -f in rdup-gzip (bug reported by David Martin)
   * Fix a bug in rdup-crypt (reported by David Martin)
   * Use 'warn' in rdup-gzip/crypt, echo a warning and continue
     when files fail to zip or crypt.
   * rdup-dump, rdup-snapshot: -n path, changed semantics. If is
     now a path prefix in stead of a file prefix
   * documentation updates in the manpages of rdup-dump and
     rdup-snapshot
   * add -l to rdup-dump, rdup-snapshot for an optional lockfile dir


11 Feb 2007: 0.3.7 Miek <miek@miek.nl>
  -- bugfixes --
   * removed @datarootdir@ as this gives errors with older
     autoconf versions (reported by Jelte Jansen)
   * rdup-snap: when removing, look at the type, and if it's
     a dir use rmtree, otherwise unlink
   * Add -E option to all utilities (reported by Joerg Rueppel)
   * Fix -e in rdup-snapshot and rdup-dump
   * removed spec file from distribution - there are multiple
     spec files to be found on the internet


26 Jan 2007: 0.3.6 Miek <miek@miek.nl>
  -- minor bugfixes --
   * Small fixes for rdup-dump (Fabio Rossi)
   * sh-wrappers: print the unknown option when encountering one
   * gfunc.c: write remaining bytes when cutting of growing 
     files in a remote backup
   * Use DEcrypt and gUNzip when restoring
   * Added (local) locking in the shell wrapper tools
   * Allow control-C when reading the filelist file
   * When using /dev/null as filelist file, don't complain
     about not being able to ftruncate it