@@ -28,6 +28,10 @@ $zipOptions .= "-d " if $opt{'d'};
 my $tmpDir = tempdir("rdup.backup.XXXXXX", TMPDIR => 1, CLEANUP => 1);
 die "** $tmpDir could not be created: $!" unless -d $tmpDir;
 
+if (system('mcrypt 2>&1 >/dev/null')) {
+	die "** Cannot find \`gzip'";
+}
+
 while (($_ = <STDIN>)) {
         chomp;
         my ($t, $bits, $uid, $gid, $psize, $fsize) = split(" ", $_, 6);
