@@ -2,6 +2,10 @@ xx May 2007: 0.3.9 Miek <miek@miek.nl>
   -- small fixes --
    * Add -S and -D to the known options of rdup-restore (reported by 
      Ben Coffey)
+   * Add runtime check to find mcrypt to rdup-crypt  (reported by Ben
+     Coffey)
+   * Documentation updates and tweaks
+
 
 14 Mar 2007: 0.3.8 Miek <miek@miek.nl>
   -- bugfixes --
